# vkrs

./: Cargo.toml  README.md  build.rs
src/: main.rs  vkrs.rs
src/vkrs/: app.rs  extensions.rs  queue_family_indices.rs  shader.rs  swapchain.rs  uniform_buffer_object.rs  validation.rs  vertex.rs  vulkan.rs
src/vkrs/shaders/: shader.vert
