[package]
name = "vkrs"
version = "0.1.0"
authors = ["Love Westlund"]
edition = "2021"

[dependencies]
ash = "0.35.1"
ash-window = "0.9.0"
glam = "0.20.2"
log = "0.4.0"
env_logger = "0.9.0"
memoffset = "0.6.5"
winit = "0.26.1"

[build-dependencies]
# TODO(lovew): Move to [dependencies] when we implement live reloading of shaders.
shaderc = "0.7.4"
